ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
spec:
  rules:
  - host: demo.local
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: frontend-svc
            port: 
              number: 80
      - pathType: Prefix
        path: /api
        backend:
          service:
            name: backend-svc
            port: 
              number: 5678
